<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wirtualna Szafa</string>
    <string name="navigation_drawer_open">Otwórz menu</string>
    <string name="navigation_drawer_close">Zamknij menu</string>
    <string name="nav_header_title">Wirtualna Szafa</string>
    <string name="nav_header_subtitle">v1.0</string>
    <string name="nav_header_desc">Menu</string>

    <string name="dotmenu_lighttheme">Jasny motyw</string>
    <string name="dotmenu_darktheme">Ciemny motyw</string>

    <!-- placeholder texts in java files -->
    <string name="hello_blank_fragment">PLACEHOLDER TEXT</string>

    <!-- fragment_main & MainActivity -->
    <string name="menu_home">Strona główna</string>

    <!-- fragment_gallery -->
    <string name="menu_gallery">Galeria</string>
    <string name="button_gallery_delete">Usuń element</string>
    <string name="deleted_from_db">Usunięto</string>
    <string name="empty_gallery">Galeria jest pusta,\nużyj <i>Dodaj element</i></string>
    <string name="tag">TAG: %1$s</string>
    <string name="color">KOLOR: %1$s</string>

    <!-- fragment_filter_by_gallery -->
    <string name="menu_filter_by">Filtruj po tagach i kolorach</string>
    <string name="button_filter">Filtruj i wyświetl</string>

    <!-- fragment_add_element -->
    <string name="menu_add_element">Dodaj element</string>
    <string name="save_photo">Zapisz</string>
    <string name="cancel_photo">Anuluj</string>
    <string name="add_from_gallery">Dodaj zdjęcie z galerii</string>
    <string name="add_from_camera">Zrób zdjęcie</string>
    <string name="add_tag_placeholder">TAG</string>
    <string name="add_color_placeholer">KOLOR</string>
    <string name="add_photoimgview">Dodane zdjęcie</string>

    <string-array name="add_tag">
        <item>buty</item>
        <item>góra</item>
        <item>dół</item>
        <item>akcesoria</item>
        <item> </item>
    </string-array>

    <string-array name="add_color">
        <item>beżowy</item>
        <item>biały</item>
        <item>brązowy</item>
        <item>czarny</item>
        <item>czerwony</item>
        <item>fioletowy</item>
        <item>granatowy</item>
        <item>niebieski</item>
        <item>pomarańczowy</item>
        <item>różowy</item>
        <item>szary</item>
        <item>zielony</item>
        <item>żółty</item>
        <item>inny</item>
        <item> </item>
    </string-array>

    <!-- fragment_randomize -->
    <string name="menu_randomize">Losuj zestaw</string>
    <string name="nav_randomize">Wylosowany zestaw</string>
    <string name="new_random">Losuj ponownie</string>
    <string name="save_random">Zapisz zestaw</string>

    <!-- fragment_collections -->
    <string name="menu_collection">Zapisane zestawy WIP</string>
    <string name="previous">Poprzedni</string>
    <string name="next">Następny</string>

    <!-- fragment_account -->
    <string name="menu_account">Twoje konto</string>
    <string name="register_button">Zarejestruj</string>
    <string name="login">Zaloguj się</string>
    <string name="account_email">Email</string>
    <string name="account_password">Hasło</string>
    <string name="account_username">Nazwa użytkownika</string>

</resources>